syntax = "proto3";

package jwt;

option go_package = "/gen";

service AuthService {
  rpc CreateJWTToken(CreateTokenRequest) returns (CreateTokenResponse);
  rpc VerifyJWTToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message CreateTokenRequest {
    string username = 1;
    string password = 2;
}

message CreateTokenResponse {
    string token = 1;
}

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    bool access = 1;
}